wrightrc published a site update

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ Systems using Numerical Methods.</p>" />
   <meta property="og:description" content="<p>This book was developed as a companion text for the Virginia Tech Biological
 Systems Engineering course BSE3144: Engineering Analysis for Biological
 Systems using Numerical Methods.</p>" />
-  <meta name="github-repo" content="rstudio/bookdown-demo" />
+  <meta name="github-repo" content="VT-BSE3144/bookdown" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Page not found | Data Wrangling" />
