--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Systems using Numerical Methods.</p>" />
 <meta name="author" content="R. Clay Wright" />
 
 
-<meta name="date" content="2025-02-15" />
+<meta name="date" content="2025-02-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -143,10 +143,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">A Minimal Book Example</a></li>
+<li><a href="./">Data Analysis and Numerical Methods</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> About</a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Data Analysis and Numerical Methods for Biological Systems Engineers</a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#connection-to-previous-work-on-data-organization"><i class="fa fa-check"></i><b>1.1</b> Connection to previous work on Data Organization</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#source"><i class="fa fa-check"></i><b>1.2</b> Source</a></li>
@@ -191,10 +191,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Data Wrangling</h1>
 <p class="author"><em>R. Clay Wright</em></p>
-<p class="date"><em>2025-02-15</em></p>
+<p class="date"><em>2025-02-16</em></p>
 </div>
-<div id="about" class="section level1 hasAnchor" number="1">
-<h1><span class="header-section-number">Chapter 1</span> About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<div id="data-analysis-and-numerical-methods-for-biological-systems-engineers" class="section level1 hasAnchor" number="1">
+<h1><span class="header-section-number">1</span> Data Analysis and Numerical Methods for Biological Systems Engineers<a href="index.html#data-analysis-and-numerical-methods-for-biological-systems-engineers" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>This book was developed as a companion text for the Virginia Tech Biological
 Systems Engineering course BSE3144: Engineering Analysis for Biological
 Systems using Numerical Methods.</p>
@@ -345,7 +345,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/USERNAME/REPO/edit/BRANCH/index.Rmd",
+"link": "https://github.com/VT-BSE3144/bookdown/edit/BRANCH/index.Rmd",
 "text": "Edit"
 },
 "history": {
