--- a/404.html
+++ b/404.html
@@ -147,33 +147,73 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Data Analysis and Numerical Methods for Biological Systems Engineers</a></li>
-<li class="chapter" data-level="2" data-path="data-wrangling.html"><a href="data-wrangling.html"><i class="fa fa-check"></i><b>2</b> Data Wrangling</a>
+<li class="chapter" data-level="2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html"><i class="fa fa-check"></i><b>2</b> Introduction to Posit, Rstudio, &amp; Markdown</a>
 <ul>
-<li class="chapter" data-level="2.1" data-path="data-wrangling.html"><a href="data-wrangling.html#connection-to-previous-work-on-data-organization"><i class="fa fa-check"></i><b>2.1</b> Connection to previous work on Data Organization</a></li>
-<li class="chapter" data-level="2.2" data-path="data-wrangling.html"><a href="data-wrangling.html#source"><i class="fa fa-check"></i><b>2.2</b> Source</a></li>
-<li class="chapter" data-level="2.3" data-path="data-wrangling.html"><a href="data-wrangling.html#introduction---example-dataset-nycflights13"><i class="fa fa-check"></i><b>2.3</b> 3.1 Introduction - Example dataset <code>nycflights13</code></a></li>
-<li class="chapter" data-level="2.4" data-path="data-wrangling.html"><a href="data-wrangling.html#section"><i class="fa fa-check"></i><b>2.4</b> 3.1.2</a></li>
-<li class="chapter" data-level="2.5" data-path="data-wrangling.html"><a href="data-wrangling.html#dplyr-basics"><i class="fa fa-check"></i><b>2.5</b> 3.1.3 dplyr basics</a></li>
+<li class="chapter" data-level="2.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#pre-work"><i class="fa fa-check"></i><b>2.1</b> Pre-work</a></li>
+<li class="chapter" data-level="2.2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#posit"><i class="fa fa-check"></i><b>2.2</b> Posit</a></li>
+<li class="chapter" data-level="2.3" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#rstudio"><i class="fa fa-check"></i><b>2.3</b> Rstudio</a>
+<ul>
+<li class="chapter" data-level="2.3.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-source-pane"><i class="fa fa-check"></i><b>2.3.1</b> The Source pane</a></li>
+<li class="chapter" data-level="2.3.2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#markdown"><i class="fa fa-check"></i><b>2.3.2</b> Markdown</a></li>
+<li class="chapter" data-level="2.3.3" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#more-markdown-formatting"><i class="fa fa-check"></i><b>2.3.3</b> More Markdown formatting</a></li>
+<li class="chapter" data-level="2.3.4" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#running-code"><i class="fa fa-check"></i><b>2.3.4</b> Running code</a></li>
+<li class="chapter" data-level="2.3.5" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-console-pane"><i class="fa fa-check"></i><b>2.3.5</b> The Console pane</a></li>
+<li class="chapter" data-level="2.3.6" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-help-pane"><i class="fa fa-check"></i><b>2.3.6</b> The Help pane</a></li>
+<li class="chapter" data-level="2.3.7" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-filesplotspackageshelpviewer-pane"><i class="fa fa-check"></i><b>2.3.7</b> The Files/Plots/Packages/Help/Viewer pane</a></li>
+<li class="chapter" data-level="2.3.8" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#ok-back-to-the-source-pane"><i class="fa fa-check"></i><b>2.3.8</b> OK, back to the Source pane…</a></li>
+<li class="chapter" data-level="2.3.9" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-environment-pane"><i class="fa fa-check"></i><b>2.3.9</b> The Environment pane</a></li>
+<li class="chapter" data-level="2.3.10" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#the-historyconnectionsgitbuildtutorial-pane"><i class="fa fa-check"></i><b>2.3.10</b> The History/Connections/Git/Build/Tutorial pane</a></li>
+<li class="chapter" data-level="2.3.11" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#terminalrenderbackground-jobs"><i class="fa fa-check"></i><b>2.3.11</b> Terminal/Render/Background Jobs</a></li>
+<li class="chapter" data-level="2.3.12" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#yaml-headers"><i class="fa fa-check"></i><b>2.3.12</b> YAML headers</a></li>
+<li class="chapter" data-level="2.3.13" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#code-chunkblock-settings-and-global-settings"><i class="fa fa-check"></i><b>2.3.13</b> Code chunk/block settings and global settings</a></li>
+<li class="chapter" data-level="2.3.14" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#output-options"><i class="fa fa-check"></i><b>2.3.14</b> Output Options</a></li>
+<li class="chapter" data-level="2.3.15" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#troubleshooting-knitrender-problems"><i class="fa fa-check"></i><b>2.3.15</b> Troubleshooting Knit/Render problems</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="rows.html"><a href="rows.html"><i class="fa fa-check"></i><b>3</b> 3.2 Rows</a>
+<li class="chapter" data-level="2.4" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#rstudio-and-markdown-examples"><i class="fa fa-check"></i><b>2.4</b> Rstudio and Markdown examples</a></li>
+<li class="chapter" data-level="2.5" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#navigate-the-posit-and-rstudio-interface-with-proficiency."><i class="fa fa-check"></i><b>2.5</b> Navigate the Posit and RStudio interface with proficiency.</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="rows.html"><a href="rows.html#filter"><i class="fa fa-check"></i><b>3.1</b> 3.2.1 filter()</a>
-<ul>
-<li class="chapter" data-level="3.1.1" data-path="rows.html"><a href="rows.html#logical-operators"><i class="fa fa-check"></i><b>3.1.1</b> Logical Operators</a></li>
-<li class="chapter" data-level="3.1.2" data-path="rows.html"><a href="rows.html#missing-values"><i class="fa fa-check"></i><b>3.1.2</b> Missing values</a></li>
+<li class="chapter" data-level="2.5.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#making-new-documents"><i class="fa fa-check"></i><b>2.5.1</b> Making new documents</a></li>
+<li class="chapter" data-level="2.5.2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#navigating-the-file-pane-and-file-paths"><i class="fa fa-check"></i><b>2.5.2</b> Navigating the file pane and file paths</a></li>
+<li class="chapter" data-level="2.5.3" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#console-pane"><i class="fa fa-check"></i><b>2.5.3</b> Console pane</a></li>
+<li class="chapter" data-level="2.5.4" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#environment-pane"><i class="fa fa-check"></i><b>2.5.4</b> Environment pane</a></li>
+<li class="chapter" data-level="2.5.5" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#history-pane"><i class="fa fa-check"></i><b>2.5.5</b> History pane</a></li>
 </ul></li>
-<li class="chapter" data-level="3.2" data-path="rows.html"><a href="rows.html#arranging-rows"><i class="fa fa-check"></i><b>3.2</b> 3.2.3 Arranging rows</a></li>
-<li class="chapter" data-level="3.3" data-path="rows.html"><a href="rows.html#columns"><i class="fa fa-check"></i><b>3.3</b> 3.3 Columns</a></li>
-<li class="chapter" data-level="3.4" data-path="rows.html"><a href="rows.html#mutate---add-new-variables"><i class="fa fa-check"></i><b>3.4</b> 3.3.1 Mutate - Add new variables</a></li>
-<li class="chapter" data-level="3.5" data-path="rows.html"><a href="rows.html#select"><i class="fa fa-check"></i><b>3.5</b> 3.3.2 Select</a></li>
-<li class="chapter" data-level="3.6" data-path="rows.html"><a href="rows.html#the-pipe"><i class="fa fa-check"></i><b>3.6</b> 3.4 The pipe</a></li>
-<li class="chapter" data-level="3.7" data-path="rows.html"><a href="rows.html#groups"><i class="fa fa-check"></i><b>3.7</b> 3.5 Groups</a></li>
-<li class="chapter" data-level="3.8" data-path="rows.html"><a href="rows.html#filter-1"><i class="fa fa-check"></i><b>3.8</b> Filter</a></li>
-<li class="chapter" data-level="3.9" data-path="rows.html"><a href="rows.html#arrange"><i class="fa fa-check"></i><b>3.9</b> Arrange</a></li>
-<li class="chapter" data-level="3.10" data-path="rows.html"><a href="rows.html#mutate---adds-a-new-column"><i class="fa fa-check"></i><b>3.10</b> Mutate - adds a new column</a></li>
-<li class="chapter" data-level="3.11" data-path="rows.html"><a href="rows.html#select-1"><i class="fa fa-check"></i><b>3.11</b> Select</a></li>
-<li class="chapter" data-level="3.12" data-path="rows.html"><a href="rows.html#select-2"><i class="fa fa-check"></i><b>3.12</b> Select</a></li>
-<li class="chapter" data-level="3.13" data-path="rows.html"><a href="rows.html#grouped-summaries"><i class="fa fa-check"></i><b>3.13</b> Grouped summaries</a></li>
+<li class="chapter" data-level="2.6" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#articulate-the-process-of-using-rstudio-to-develop-markdown-documents."><i class="fa fa-check"></i><b>2.6</b> Articulate the process of using RStudio to develop markdown documents.</a>
+<ul>
+<li class="chapter" data-level="2.6.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#cheat-sheets-yay"><i class="fa fa-check"></i><b>2.6.1</b> Cheat Sheets! Yay!</a></li>
+<li class="chapter" data-level="2.6.2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#inserting-code-chunks"><i class="fa fa-check"></i><b>2.6.2</b> Inserting code chunks</a></li>
+<li class="chapter" data-level="2.6.3" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#changing-code-chunk-settings"><i class="fa fa-check"></i><b>2.6.3</b> Changing code chunk settings</a></li>
+</ul></li>
+<li class="chapter" data-level="2.7" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#practice-using-markdown-to-format-reproducible-documents"><i class="fa fa-check"></i><b>2.7</b> Practice using markdown to format reproducible documents</a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="tasks.html"><a href="tasks.html"><i class="fa fa-check"></i><b>3</b> Tasks</a></li>
+<li class="chapter" data-level="4" data-path="data-wrangling.html"><a href="data-wrangling.html"><i class="fa fa-check"></i><b>4</b> Data Wrangling</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="data-wrangling.html"><a href="data-wrangling.html#connection-to-previous-work-on-data-organization"><i class="fa fa-check"></i><b>4.1</b> Connection to previous work on Data Organization</a></li>
+<li class="chapter" data-level="4.2" data-path="data-wrangling.html"><a href="data-wrangling.html#source"><i class="fa fa-check"></i><b>4.2</b> Source</a></li>
+<li class="chapter" data-level="4.3" data-path="data-wrangling.html"><a href="data-wrangling.html#introduction---example-dataset-nycflights13"><i class="fa fa-check"></i><b>4.3</b> 3.1 Introduction - Example dataset <code>nycflights13</code></a></li>
+<li class="chapter" data-level="4.4" data-path="data-wrangling.html"><a href="data-wrangling.html#section"><i class="fa fa-check"></i><b>4.4</b> 3.1.2</a></li>
+<li class="chapter" data-level="4.5" data-path="data-wrangling.html"><a href="data-wrangling.html#dplyr-basics"><i class="fa fa-check"></i><b>4.5</b> 3.1.3 dplyr basics</a></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="rows.html"><a href="rows.html"><i class="fa fa-check"></i><b>5</b> 3.2 Rows</a>
+<ul>
+<li class="chapter" data-level="5.1" data-path="rows.html"><a href="rows.html#filter"><i class="fa fa-check"></i><b>5.1</b> 3.2.1 filter()</a>
+<ul>
+<li class="chapter" data-level="5.1.1" data-path="rows.html"><a href="rows.html#logical-operators"><i class="fa fa-check"></i><b>5.1.1</b> Logical Operators</a></li>
+<li class="chapter" data-level="5.1.2" data-path="rows.html"><a href="rows.html#missing-values"><i class="fa fa-check"></i><b>5.1.2</b> Missing values</a></li>
+</ul></li>
+<li class="chapter" data-level="5.2" data-path="rows.html"><a href="rows.html#arranging-rows"><i class="fa fa-check"></i><b>5.2</b> 3.2.3 Arranging rows</a></li>
+<li class="chapter" data-level="5.3" data-path="rows.html"><a href="rows.html#columns"><i class="fa fa-check"></i><b>5.3</b> 3.3 Columns</a></li>
+<li class="chapter" data-level="5.4" data-path="rows.html"><a href="rows.html#mutate---add-new-variables"><i class="fa fa-check"></i><b>5.4</b> 3.3.1 Mutate - Add new variables</a></li>
+<li class="chapter" data-level="5.5" data-path="rows.html"><a href="rows.html#select"><i class="fa fa-check"></i><b>5.5</b> 3.3.2 Select</a></li>
+<li class="chapter" data-level="5.6" data-path="rows.html"><a href="rows.html#the-pipe"><i class="fa fa-check"></i><b>5.6</b> 3.4 The pipe</a></li>
+<li class="chapter" data-level="5.7" data-path="rows.html"><a href="rows.html#groups"><i class="fa fa-check"></i><b>5.7</b> 3.5 Groups</a></li>
+<li class="chapter" data-level="5.8" data-path="rows.html"><a href="rows.html#filter-1"><i class="fa fa-check"></i><b>5.8</b> Filter</a></li>
+<li class="chapter" data-level="5.9" data-path="rows.html"><a href="rows.html#arrange"><i class="fa fa-check"></i><b>5.9</b> Arrange</a></li>
+<li class="chapter" data-level="5.10" data-path="rows.html"><a href="rows.html#mutate---adds-a-new-column"><i class="fa fa-check"></i><b>5.10</b> Mutate - adds a new column</a></li>
+<li class="chapter" data-level="5.11" data-path="rows.html"><a href="rows.html#select-1"><i class="fa fa-check"></i><b>5.11</b> Select</a></li>
+<li class="chapter" data-level="5.12" data-path="rows.html"><a href="rows.html#select-2"><i class="fa fa-check"></i><b>5.12</b> Select</a></li>
+<li class="chapter" data-level="5.13" data-path="rows.html"><a href="rows.html#grouped-summaries"><i class="fa fa-check"></i><b>5.13</b> Grouped summaries</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
