--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li><a href="./">Data Analysis and Numerical Methods</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Data Analysis and Numerical Methods for Biological Systems Engineers</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> About this book</a></li>
 <li class="chapter" data-level="2" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html"><i class="fa fa-check"></i><b>2</b> Introduction to Posit, Rstudio, &amp; Markdown</a>
 <ul>
 <li class="chapter" data-level="2.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#pre-work"><i class="fa fa-check"></i><b>2.1</b> Pre-work</a></li>
@@ -242,8 +242,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p class="author"><em>R. Clay Wright</em></p>
 <p class="date"><em>2025-02-16</em></p>
 </div>
-<div id="data-analysis-and-numerical-methods-for-biological-systems-engineers" class="section level1 hasAnchor" number="1">
-<h1><span class="header-section-number">1</span> Data Analysis and Numerical Methods for Biological Systems Engineers<a href="index.html#data-analysis-and-numerical-methods-for-biological-systems-engineers" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<div id="about-this-book" class="section level1 hasAnchor" number="1">
+<h1><span class="header-section-number">1</span> About this book<a href="index.html#about-this-book" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>This book was developed as a companion text for the Virginia Tech Biological
 Systems Engineering course BSE3144: Engineering Analysis for Biological
 Systems using Numerical Methods.</p>
