--- a/introduction-to-posit-rstudio-markdown.html
+++ b/introduction-to-posit-rstudio-markdown.html
@@ -37,7 +37,7 @@ Systems using Numerical Methods.</p>" />
   
   
 <link rel="prev" href="index.html"/>
-
+<link rel="next" href="data-wrangling.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -187,6 +187,36 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.7" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#practice-using-markdown-to-format-reproducible-documents"><i class="fa fa-check"></i><b>2.7</b> Practice using markdown to format reproducible documents</a>
 <ul>
 <li class="chapter" data-level="2.7.1" data-path="introduction-to-posit-rstudio-markdown.html"><a href="introduction-to-posit-rstudio-markdown.html#tasks"><i class="fa fa-check"></i><b>2.7.1</b> Tasks</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="data-wrangling.html"><a href="data-wrangling.html"><i class="fa fa-check"></i><b>3</b> Data Wrangling</a>
+<ul>
+<li class="chapter" data-level="3.1" data-path="data-wrangling.html"><a href="data-wrangling.html#connection-to-previous-work-on-data-organization"><i class="fa fa-check"></i><b>3.1</b> Connection to previous work on Data Organization</a></li>
+<li class="chapter" data-level="3.2" data-path="data-wrangling.html"><a href="data-wrangling.html#source"><i class="fa fa-check"></i><b>3.2</b> Source</a></li>
+<li class="chapter" data-level="3.3" data-path="data-wrangling.html"><a href="data-wrangling.html#introduction---example-dataset-nycflights13"><i class="fa fa-check"></i><b>3.3</b> 3.1 Introduction - Example dataset <code>nycflights13</code></a></li>
+<li class="chapter" data-level="3.4" data-path="data-wrangling.html"><a href="data-wrangling.html#section"><i class="fa fa-check"></i><b>3.4</b> 3.1.2</a></li>
+<li class="chapter" data-level="3.5" data-path="data-wrangling.html"><a href="data-wrangling.html#dplyr-basics"><i class="fa fa-check"></i><b>3.5</b> 3.1.3 dplyr basics</a></li>
+</ul></li>
+<li class="chapter" data-level="4" data-path="rows.html"><a href="rows.html"><i class="fa fa-check"></i><b>4</b> 3.2 Rows</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="rows.html"><a href="rows.html#filter"><i class="fa fa-check"></i><b>4.1</b> 3.2.1 filter()</a>
+<ul>
+<li class="chapter" data-level="4.1.1" data-path="rows.html"><a href="rows.html#logical-operators"><i class="fa fa-check"></i><b>4.1.1</b> Logical Operators</a></li>
+<li class="chapter" data-level="4.1.2" data-path="rows.html"><a href="rows.html#missing-values"><i class="fa fa-check"></i><b>4.1.2</b> Missing values</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="rows.html"><a href="rows.html#arranging-rows"><i class="fa fa-check"></i><b>4.2</b> 3.2.3 Arranging rows</a></li>
+<li class="chapter" data-level="4.3" data-path="rows.html"><a href="rows.html#columns"><i class="fa fa-check"></i><b>4.3</b> 3.3 Columns</a></li>
+<li class="chapter" data-level="4.4" data-path="rows.html"><a href="rows.html#mutate---add-new-variables"><i class="fa fa-check"></i><b>4.4</b> 3.3.1 Mutate - Add new variables</a></li>
+<li class="chapter" data-level="4.5" data-path="rows.html"><a href="rows.html#select"><i class="fa fa-check"></i><b>4.5</b> 3.3.2 Select</a></li>
+<li class="chapter" data-level="4.6" data-path="rows.html"><a href="rows.html#the-pipe"><i class="fa fa-check"></i><b>4.6</b> 3.4 The pipe</a></li>
+<li class="chapter" data-level="4.7" data-path="rows.html"><a href="rows.html#groups"><i class="fa fa-check"></i><b>4.7</b> 3.5 Groups</a></li>
+<li class="chapter" data-level="4.8" data-path="rows.html"><a href="rows.html#data-wrangling-examples"><i class="fa fa-check"></i><b>4.8</b> Data Wrangling Examples</a>
+<ul>
+<li class="chapter" data-level="4.8.1" data-path="rows.html"><a href="rows.html#filter-1"><i class="fa fa-check"></i><b>4.8.1</b> Filter</a></li>
+<li class="chapter" data-level="4.8.2" data-path="rows.html"><a href="rows.html#arrange"><i class="fa fa-check"></i><b>4.8.2</b> Arrange</a></li>
+<li class="chapter" data-level="4.8.3" data-path="rows.html"><a href="rows.html#mutate---adds-a-new-column"><i class="fa fa-check"></i><b>4.8.3</b> Mutate - adds a new column</a></li>
+<li class="chapter" data-level="4.8.4" data-path="rows.html"><a href="rows.html#select-1"><i class="fa fa-check"></i><b>4.8.4</b> Select</a></li>
+<li class="chapter" data-level="4.8.5" data-path="rows.html"><a href="rows.html#grouped-summaries"><i class="fa fa-check"></i><b>4.8.5</b> Grouped summaries</a></li>
 </ul></li>
 </ul></li>
 <li class="divider"></li>
@@ -717,8 +747,8 @@ Put your cursor in the middle of the parentheses and press <code>tab</code>. RSt
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="data-wrangling.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
