--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Systems using Numerical Methods.</p>" />
 <meta name="author" content="R. Clay Wright" />
 
 
-<meta name="date" content="2025-02-16" />
+<meta name="date" content="2025-02-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -198,28 +198,26 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.3" data-path="data-wrangling.html"><a href="data-wrangling.html#introduction---example-dataset-nycflights13"><i class="fa fa-check"></i><b>2.3</b> 3.1 Introduction - Example dataset <code>nycflights13</code></a></li>
 <li class="chapter" data-level="2.4" data-path="data-wrangling.html"><a href="data-wrangling.html#section"><i class="fa fa-check"></i><b>2.4</b> 3.1.2</a></li>
 <li class="chapter" data-level="2.5" data-path="data-wrangling.html"><a href="data-wrangling.html#dplyr-basics"><i class="fa fa-check"></i><b>2.5</b> 3.1.3 dplyr basics</a></li>
-</ul></li>
-<li class="chapter" data-level="3" data-path="rows.html"><a href="rows.html"><i class="fa fa-check"></i><b>3</b> 3.2 Rows</a>
+<li class="chapter" data-level="2.6" data-path="data-wrangling.html"><a href="data-wrangling.html#row-wise-functions"><i class="fa fa-check"></i><b>2.6</b> 3.2 Row-wise functions</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="rows.html"><a href="rows.html#filter"><i class="fa fa-check"></i><b>3.1</b> 3.2.1 filter()</a>
-<ul>
-<li class="chapter" data-level="3.1.1" data-path="rows.html"><a href="rows.html#logical-operators"><i class="fa fa-check"></i><b>3.1.1</b> Logical Operators</a></li>
-<li class="chapter" data-level="3.1.2" data-path="rows.html"><a href="rows.html#missing-values"><i class="fa fa-check"></i><b>3.1.2</b> Missing values</a></li>
+<li class="chapter" data-level="2.6.1" data-path="data-wrangling.html"><a href="data-wrangling.html#filter"><i class="fa fa-check"></i><b>2.6.1</b> 3.2.1 filter()</a></li>
+<li class="chapter" data-level="2.6.2" data-path="data-wrangling.html"><a href="data-wrangling.html#arranging-rows"><i class="fa fa-check"></i><b>2.6.2</b> 3.2.3 Arranging rows</a></li>
 </ul></li>
-<li class="chapter" data-level="3.2" data-path="rows.html"><a href="rows.html#arranging-rows"><i class="fa fa-check"></i><b>3.2</b> 3.2.3 Arranging rows</a></li>
-<li class="chapter" data-level="3.3" data-path="rows.html"><a href="rows.html#columns"><i class="fa fa-check"></i><b>3.3</b> 3.3 Columns</a></li>
-<li class="chapter" data-level="3.4" data-path="rows.html"><a href="rows.html#mutate---add-new-variables"><i class="fa fa-check"></i><b>3.4</b> 3.3.1 Mutate - Add new variables</a></li>
-<li class="chapter" data-level="3.5" data-path="rows.html"><a href="rows.html#select"><i class="fa fa-check"></i><b>3.5</b> 3.3.2 Select</a></li>
-<li class="chapter" data-level="3.6" data-path="rows.html"><a href="rows.html#the-pipe"><i class="fa fa-check"></i><b>3.6</b> 3.4 The pipe</a></li>
-<li class="chapter" data-level="3.7" data-path="rows.html"><a href="rows.html#groups"><i class="fa fa-check"></i><b>3.7</b> 3.5 Groups</a></li>
+<li class="chapter" data-level="2.7" data-path="data-wrangling.html"><a href="data-wrangling.html#columns"><i class="fa fa-check"></i><b>2.7</b> 3.3 Columns</a>
+<ul>
+<li class="chapter" data-level="2.7.1" data-path="data-wrangling.html"><a href="data-wrangling.html#mutate---add-new-variables"><i class="fa fa-check"></i><b>2.7.1</b> 3.3.1 Mutate - Add new variables</a></li>
+<li class="chapter" data-level="2.7.2" data-path="data-wrangling.html"><a href="data-wrangling.html#select"><i class="fa fa-check"></i><b>2.7.2</b> 3.3.2 Select</a></li>
+</ul></li>
+<li class="chapter" data-level="2.8" data-path="data-wrangling.html"><a href="data-wrangling.html#the-pipe"><i class="fa fa-check"></i><b>2.8</b> 3.4 The pipe</a></li>
+<li class="chapter" data-level="2.9" data-path="data-wrangling.html"><a href="data-wrangling.html#groups"><i class="fa fa-check"></i><b>2.9</b> 3.5 Groups</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html"><i class="fa fa-check"></i>Data Wrangling Examples</a>
 <ul>
-<li class="chapter" data-level="3.7.1" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#filter-1"><i class="fa fa-check"></i><b>3.7.1</b> Filter</a></li>
-<li class="chapter" data-level="3.7.2" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#arrange"><i class="fa fa-check"></i><b>3.7.2</b> Arrange</a></li>
-<li class="chapter" data-level="3.7.3" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#mutate---adds-a-new-column"><i class="fa fa-check"></i><b>3.7.3</b> Mutate - adds a new column</a></li>
-<li class="chapter" data-level="3.7.4" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#select-1"><i class="fa fa-check"></i><b>3.7.4</b> Select</a></li>
-<li class="chapter" data-level="3.7.5" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#grouped-summaries"><i class="fa fa-check"></i><b>3.7.5</b> Grouped summaries</a></li>
+<li class="chapter" data-level="2.9.1" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#filter-1"><i class="fa fa-check"></i><b>2.9.1</b> Filter</a></li>
+<li class="chapter" data-level="2.9.2" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#arrange"><i class="fa fa-check"></i><b>2.9.2</b> Arrange</a></li>
+<li class="chapter" data-level="2.9.3" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#mutate---adds-a-new-column"><i class="fa fa-check"></i><b>2.9.3</b> Mutate - adds a new column</a></li>
+<li class="chapter" data-level="2.9.4" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#select-1"><i class="fa fa-check"></i><b>2.9.4</b> Select</a></li>
+<li class="chapter" data-level="2.9.5" data-path="data-wrangling-examples.html"><a href="data-wrangling-examples.html#grouped-summaries"><i class="fa fa-check"></i><b>2.9.5</b> Grouped summaries</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -244,7 +242,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Data Analysis and Numerical Methods for Biological Systems Engineers</h1>
 <p class="author"><em>R. Clay Wright</em></p>
-<p class="date"><em>2025-02-16</em></p>
+<p class="date"><em>2025-02-17</em></p>
 </div>
 <div id="about-this-book" class="section level1 unnumbered hasAnchor">
 <h1>About this book<a href="index.html#about-this-book" class="anchor-section" aria-label="Anchor link to header"></a></h1>
