--- a/summarizing-data-examples.html
+++ b/summarizing-data-examples.html
@@ -26,10 +26,11 @@ Systems Engineering course BSE3144: Engineering Analysis for Biological
 Systems using Numerical Methods.</p>" />
   
 
+<meta name="author" content="Durelle Scott" />
 <meta name="author" content="R. Clay Wright" />
 
 
-<meta name="date" content="2025-02-19" />
+<meta name="date" content="2025-02-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -545,8 +546,8 @@ gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
 "github": false,
-"facebook": true,
-"twitter": true,
+"facebook": false,
+"twitter": false,
 "linkedin": false,
 "weibo": false,
 "instapaper": false,
@@ -560,8 +561,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/VT-BSE3144/bookdown/edit/BRANCH/05-1_Examples.Rmd",
-"text": "Edit"
+"link": null,
+"text": null
 },
 "history": {
 "link": null,
@@ -577,7 +578,8 @@ gitbook.start({
 "options": null
 },
 "toc": {
-"collapse": "subsection"
+"collapse": "subsection",
+"scroll_highlight": true
 }
 });
 });
